[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Canonical Python SDK name. We already own this slot on PyPI (existing
# 1.x reservation by EvalGuard, Inc.), so it's the stable home for the
# real SDK — `pip install evalguardai`. The unrelated third-party
# `evalguard` package is owned by github.com/yolojewjitsu and is not
# affiliated with EvalGuard, Inc.; if/when we acquire it, we'd publish
# `evalguard` and shim `evalguardai` back to it (mirroring the npm move
# from @evalguardai/* → @evalguard/*). Aliases `evalguard-sdk` and
# `evalguard-python` are deprecation shims that re-export from here.
name = "evalguardai"
version = "2.1.0"
description = "Official EvalGuard Python SDK — LLM evaluation, red-team security, runtime guardrails, observability, and FinOps."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0"]
authors = [{name = "EvalGuard", email = "support@evalguard.ai"}]
keywords = [
    "llm",
    "evaluation",
    "ai",
    "security",
    "red-team",
    "prompt-injection",
    "guardrails",
    "ai-safety",
    "llm-security",
    "agent-evaluation",
    "monitoring",
    "evalguard",
    "openai",
    "anthropic",
    "langchain",
    "bedrock",
    "crewai",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
bedrock = ["boto3>=1.28.0"]
fastapi = ["fastapi>=0.100.0"]
# R9-1: optional pydantic dep — the plugin activates automatically once
# Pydantic is installed in the same environment, but users not using
# pydantic don't pay the install weight.
pydantic = ["pydantic>=2.5.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "langchain-core>=0.1.0",
    "crewai>=0.1.0",
    "boto3>=1.28.0",
    "fastapi>=0.100.0",
    "pydantic>=2.5.0",
]
dev = ["pytest>=7.0", "pytest-mock>=3.10", "responses>=0.23"]

[project.urls]
Homepage = "https://evalguard.ai"
Repository = "https://github.com/EvalGuardAi/evalguard"
Documentation = "https://docs.evalguard.ai/python-sdk"
Issues = "https://github.com/EvalGuardAi/evalguard/issues"
Changelog = "https://github.com/EvalGuardAi/evalguard/releases"

[project.entry-points.pytest11]
evalguard = "evalguard.pytest_plugin"

# R9-1: Pydantic plugin entry point. Once the SDK is installed in an
# env that also has pydantic, the plugin auto-loads and every
# validate_python / validate_json / validate_strings emits an EvalGuard
# span. Honors PYDANTIC_DISABLE_PLUGINS=__all__,evalguard and
# EVALGUARD_PYDANTIC_DISABLED=1 env kill-switches.
#
# NB: Pydantic uses group "pydantic" (NOT "pydantic.plugins" — see
# pydantic.plugin._loader.PYDANTIC_ENTRY_POINT_GROUP). Don't change
# this group name without verifying against the pydantic source.
[project.entry-points.pydantic]
evalguard = "evalguard.pydantic_integration:plugin"

[tool.setuptools.packages.find]
include = ["evalguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
